# CapTech-AI-Capstone2026

./: README.md  STATUS.md  instructions.md  pyproject.toml  readme_setup.md
docs/: architecture.md  authentication.md  examples.md  model_isolation.md  testing.md
docs/llamaindex_examples/: example_chat_usage.py  example_model_isolation.py  example_usage.py  example_vector_search.py  get_token.py
src/: llamaindex_models.py
src/ailab/: __init__.py
src/ailab/utils/: azure.py
